--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link href="../Css/index.css" rel="stylesheet">
+    <link href="./Css/index.css" rel="stylesheet">
 </head>
 <body>
     <div class="header">
-        <img src="../images/gnitLogo.png">
+        <img src="./images/gnitLogo.png">
         <h1>Guru Nanak Institute Of Technology</h1>        
 
     </div>
