--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <div class="header">
         <img src="./images/gnitLogo.png">
-        <h1>Guru Nanak Institute Of Technology</h1>        
-
+        <h1>Guru Nanak Institute of Technology</h1>        
     </div>
-
+    <div class="department">
+        <h2>Department of Computer Science and Technology</h2>
+    </div>
+    <hr>
 
 
 
