--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Guru Nanak Institute of Technology</h1>        
     </div>
     <div class="department">
-        <h2>Department of Computer Science and Technology</h2>
+        <h2>Department of Computer Science and Engineering</h2>
     </div>
     <hr>
 
